tests/dataset/tpc-ds/compiler/c/q43.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int year = 2020;
static int gmt = 0;

typedef struct {
  const char *s_store_name;
  const char *s_store_id;
  double sun_sales;
  double mon_sales;
  double tue_sales;
  double wed_sales;
  double thu_sales;
  double fri_sales;
  double sat_sales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int date_sk;
  const char *d_day_name;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int store_sk;
  const char *store_id;
  const char *store_name;
  int gmt_offset;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sold_date_sk;
  int store_sk;
  double sales_price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *d_day_name;
  const char *s_store_name;
  const char *s_store_id;
  double price;
} records_item_t;
typedef struct {
  int len;
  records_item_t *data;
} records_item_list_t;
records_item_list_t create_records_item_list(int len) {
  records_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(records_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_name;
  int s_store_id;
  double sun_sales;
  double mon_sales;
  double tue_sales;
  double wed_sales;
  double thu_sales;
  double fri_sales;
  double sat_sales;
} base_item_t;
typedef struct {
  int len;
  base_item_t *data;
} base_item_list_t;
base_item_list_t create_base_item_list(int len) {
  base_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(base_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q43_simplified_result;
static void test_TPCDS_Q43_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.s_store_name = "Main",
                            .s_store_id = "S1",
                            .sun_sales = 10.0,
                            .mon_sales = 20.0,
                            .tue_sales = 30.0,
                            .wed_sales = 40.0,
                            .thu_sales = 50.0,
                            .fri_sales = 60.0,
                            .sat_sales = 70.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q43_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q43_simplified_result.len; i3++) {
      if (test_TPCDS_Q43_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  date_dim_t date_dim[] = {
      (date_dim_t){.date_sk = 1, .d_day_name = "Sunday", .d_year = 2020},
      (date_dim_t){.date_sk = 2, .d_day_name = "Monday", .d_year = 2020},
      (date_dim_t){.date_sk = 3, .d_day_name = "Tuesday", .d_year = 2020},
      (date_dim_t){.date_sk = 4, .d_day_name = "Wednesday", .d_year = 2020},
      (date_dim_t){.date_sk = 5, .d_day_name = "Thursday", .d_year = 2020},
      (date_dim_t){.date_sk = 6, .d_day_name = "Friday", .d_year = 2020},
      (date_dim_t){.date_sk = 7, .d_day_name = "Saturday", .d_year = 2020}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {(store_t){
      .store_sk = 1, .store_id = "S1", .store_name = "Main", .gmt_offset = 0}};
  int store_len = sizeof(store) / sizeof(store[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){.sold_date_sk = 1, .store_sk = 1, .sales_price = 10.0},
      (store_sale_t){.sold_date_sk = 2, .store_sk = 1, .sales_price = 20.0},
      (store_sale_t){.sold_date_sk = 3, .store_sk = 1, .sales_price = 30.0},
      (store_sale_t){.sold_date_sk = 4, .store_sk = 1, .sales_price = 40.0},
      (store_sale_t){.sold_date_sk = 5, .store_sk = 1, .sales_price = 50.0},
      (store_sale_t){.sold_date_sk = 6, .store_sk = 1, .sales_price = 60.0},
      (store_sale_t){.sold_date_sk = 7, .store_sk = 1, .sales_price = 70.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  records_item_list_t tmp4 =
      records_item_list_t_create(date_dim.len * store_sales.len * store.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < date_dim_len; tmp6++) {
    date_dim_t d = date_dim[tmp6];
    for (int tmp7 = 0; tmp7 < store_sales_len; tmp7++) {
      store_sale_t ss = store_sales[tmp7];
      if (!(ss.sold_date_sk == d.date_sk)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < store_len; tmp8++) {
        store_t s = store[tmp8];
        if (!(ss.store_sk == s.store_sk)) {
          continue;
        }
        if (!(s.gmt_offset == gmt && d.d_year == year)) {
          continue;
        }
        tmp4.data[tmp5] = (records_item_t){.d_day_name = d.d_day_name,
                                           .s_store_name = s.store_name,
                                           .s_store_id = s.store_id,
                                           .price = ss.sales_price};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  records_item_list_t records = tmp4;
  base_item_list_t base = (base_item_list_t){0, NULL};
  base_item_list_t result = base;
  printf("[");
  for (int i9 = 0; i9 < result.len; i9++) {
    if (i9 > 0)
      printf(",");
    base_item_t it = result.data[i9];
    printf("{");
    _json_string("s_store_name");
    printf(":");
    _json_int(it.s_store_name);
    printf(",");
    _json_string("s_store_id");
    printf(":");
    _json_int(it.s_store_id);
    printf(",");
    _json_string("sun_sales");
    printf(":");
    _json_float(it.sun_sales);
    printf(",");
    _json_string("mon_sales");
    printf(":");
    _json_float(it.mon_sales);
    printf(",");
    _json_string("tue_sales");
    printf(":");
    _json_float(it.tue_sales);
    printf(",");
    _json_string("wed_sales");
    printf(":");
    _json_float(it.wed_sales);
    printf(",");
    _json_string("thu_sales");
    printf(":");
    _json_float(it.thu_sales);
    printf(",");
    _json_string("fri_sales");
    printf(":");
    _json_float(it.fri_sales);
    printf(",");
    _json_string("sat_sales");
    printf(":");
    _json_float(it.sat_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q43_simplified_result = result;
  test_TPCDS_Q43_simplified();
  return 0;
}
